--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "com.spoiledcat.git": "1.0.12",
-    "com.unity.collab-proxy": "1.17.2",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.15",
+    "com.unity.feature.vr": "1.0.0",
+    "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework": "1.3.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
