--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "com.unity.collab-proxy": "1.17.2",
+    "com.unity.formats.fbx": "4.1.2",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
@@ -45,10 +46,10 @@
     "io.extendreality.tilia.trackers.pseudobody.unity": "2.0.5",
     "io.extendreality.tilia.utilities.objectstateswitcher.unity": "2.0.1",
     "io.extendreality.tilia.utilities.shaders.unity": "1.2.0",
+    "io.extendreality.tilia.visuals.basichand.unity": "2.3.6",
     "io.extendreality.tilia.visuals.collisionfader.unity": "2.0.3",
     "io.extendreality.tilia.visuals.interactablehighlighter.unity": "2.0.3",
     "io.extendreality.tilia.visuals.tooltip.unity": "2.0.1",
-    "io.extendreality.tilia.visuals.basichand.unity": "2.3.6",
     "io.extendreality.zinnia.unity": "2.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
