--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,9 +9,10 @@
     }
   ],
   "dependencies": {
-    "com.unity.collab-proxy": "1.17.2",
+    "com.unity.collab-proxy": "1.17.6",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.formats.fbx": "4.1.2",
-    "com.unity.ide.rider": "3.0.15",
+    "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.1.31",
@@ -19,7 +20,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.2.1",
-    "com.unity.xr.openxr": "1.4.2",
+    "com.unity.xr.openxr": "1.5.3",
     "io.extendreality.tilia.camerarigs.spatialsimulator.unity": "2.0.3",
     "io.extendreality.tilia.camerarigs.trackedalias.unity": "1.8.1",
     "io.extendreality.tilia.camerarigs.xrpluginframework.unity": "2.0.1",
