--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.probuilder": "5.0.6",
     "com.unity.test-framework": "1.1.31",
     "com.unity.timeline": "1.6.4",
+    "com.unity.toolchain.linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.openxr": "1.5.3",
